# triviaskell

./: .gitignore  README.md  scratch.hs  server.hs  triviaskell.cabal
app/: Main.hs
src/: Database.hs  Server.hs
