name:                   trivia
version:                0.0.1
synopsis:               My awesome trivia app
homepage:               https://github.com/mLuby/triviaskell
license:                MIT
author:                 Mike Luby
maintainer:             Michael@mLuby.com
category:               Web
build-type:             Simple
cabal-version:          >=1.8

executable trivia
  main-is:              server.hs
  -- other-modules:       
  build-depends:        base,
                        scotty
