name:                   triviaskell
version:                0.0.1
synopsis:               My awesome trivia app
homepage:               https://github.com/mLuby/triviaskell
license:                MIT
author:                 Mike Luby
maintainer:             Michael@mLuby.com
category:               Web
build-type:             Simple
cabal-version:          >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base,
                       monad-logger,
                       persistent,
                       persistent-mysql,
                       persistent-template,
                       random,
                       resourcet,
                       scotty,
                       text,
                       transformers,
                       wai-extra,
                       aeson

executable trivia
  hs-source-dirs:       app
  main-is:              Main.hs
  build-depends:        base,
                        triviaskell
  ghc-options:          -W -Wall -Werror

test-suite test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base,
                        triviaskell
  ghc-options:          -W -Wall -Werror

source-repository head
  type:                 git
  location:             https://github.com/mLuby/triviaskell
